<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardCornerRadius="4dp"
    android:layout_marginBottom="5dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="5dp"
    android:padding="2dp"
    android:elevation="3dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".4"
                android:textStyle="bold"
                android:text="12/11/2017"
                style="@style/TextViewValueTheme"
                android:id="@+id/travel_date"/>
            />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="35dp"
            android:background="@android:color/black"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:layout_marginTop="5dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".45"
                android:text="@string/booking_id"
                style="@style/TextViewKeyTheme"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".55"
                tools:text="@string/dummy_booking_id"
                style="@style/TextViewValueTheme"
                android:id="@+id/booking_id"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:layout_marginTop="5dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".45"
                style="@style/TextViewKeyTheme"
                android:text="@string/pickup_location" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".55"
                tools:text="@string/dummy_pickup_location"
                style="@style/TextViewValueTheme"
                android:id="@+id/pickup_location"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/cancelled_drop_location_lay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:layout_marginTop="5dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".45"
                style="@style/TextViewKeyTheme"
                android:text="@string/drop_location" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".55"
                tools:text="@string/dummy_drop_location"
                style="@style/TextViewValueTheme"
                android:id="@+id/drop_location"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="5dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".45"
                style="@style/TextViewKeyTheme"
                android:text="@string/trip_type"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".55"
                tools:text="@string/dummy_trip_type"
                android:textSize="15sp"
                android:textColor="@color/taxivaxiColorMoreLightGray"
                android:fontFamily="@font/sintonyfamily"
                android:id="@+id/trip_type"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="5dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".45"
                android:layout_marginBottom="10dp"
                style="@style/TextViewKeyTheme"
                android:text="@string/payment_type"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".55"
                tools:text="@string/dummy_payment_type"
                style="@style/TextViewValueTheme"
                android:id="@+id/payment_status"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginBottom="10dp"  >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".45"
                android:layout_marginBottom="10dp"
                style="@style/TextViewKeyTheme"
                android:text="@string/cancellation_reason"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".55"
                tools:text="@string/dummy_cancellation_reason"
                style="@style/TextViewValueTheme"
                android:id="@+id/cancellation_reason"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".45"
                style="@style/TextViewKeyTheme"
                android:text="@string/no_of_passenger" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".55"
                tools:text="@string/dummy_no_of_passenger"
                style="@style/TextViewValueTheme"
                android:id="@+id/no_of_passenger"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/passenger_lay_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="5dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".45"
                android:layout_marginBottom="10dp"
                style="@style/TextViewValueTheme"
                android:text="@string/passenger_name_1"
                android:id="@+id/passenger_name_1"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".55"
                android:text="@string/passenger_contact_1"
                style="@style/TextViewValueTheme"
                android:id="@+id/passenger_contact_1"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/passenger_lay_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="5dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".45"
                android:layout_marginBottom="10dp"
                style="@style/TextViewValueTheme"
                android:text="@string/passenger_name_2"
                android:id="@+id/passenger_name_2"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".55"
                android:text="@string/passenger_contact_2"
                style="@style/TextViewValueTheme"
                android:id="@+id/passenger_contact_2"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/passenger_lay_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="5dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".45"
                android:layout_marginBottom="10dp"
                style="@style/TextViewValueTheme"
                android:text="@string/passenger_name_3"
                android:id="@+id/passenger_name_3"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".55"
                android:text="@string/passenger_contact_3"
                style="@style/TextViewValueTheme"
                android:id="@+id/passenger_contact_3"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/passenger_lay_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="5dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".45"
                android:layout_marginBottom="10dp"
                style="@style/TextViewValueTheme"
                android:text="@string/passenger_name_4"
                android:id="@+id/passenger_name_4"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".55"
                android:text="@string/passenger_contact_4"
                style="@style/TextViewValueTheme"
                android:id="@+id/passenger_contact_4"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/passenger_lay_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="5dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".45"
                android:layout_marginBottom="10dp"
                style="@style/TextViewValueTheme"
                android:text="@string/passenger_name_5"
                android:id="@+id/passenger_name_5"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".55"
                android:text="@string/passenger_contact_5"
                style="@style/TextViewValueTheme"
                android:id="@+id/passenger_contact_5"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/passenger_lay_6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="5dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".45"
                android:layout_marginBottom="10dp"
                style="@style/TextViewValueTheme"
                android:text="@string/passenger_name_6"
                android:id="@+id/passenger_name_6"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".55"
                android:text="@string/passenger_contact_6"
                style="@style/TextViewValueTheme"
                android:id="@+id/passenger_contact_6"/>
        </LinearLayout>

        <TextView
            android:id="@+id/passenger_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextViewKeyTheme"
            android:layout_gravity="right"
            android:gravity="center_horizontal"
            android:text="@string/passenger_details"
            android:layout_marginRight="5dp"
            android:drawableBottom="@drawable/ic_keyboard_arrow_down_black_24px"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>
