<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_corner_rectangle">

    <TextView
        android:id="@+id/warning"
        android:layout_width="360dp"
        android:text="@string/warning"
        android:gravity="center"
        android:textSize="20dp"
        android:textStyle="bold"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/warning_divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/taxivaxiColorMoreLightGray"
        app:layout_constraintTop_toBottomOf="@+id/warning"
        />
    <TextView
        android:id="@+id/not_at_pickup_warning"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:paddingStart="20dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/not_at_pickup_warning_text"
        app:layout_constraintTop_toBottomOf="@+id/warning_divider"
        />

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel_text"
        app:layout_constraintTop_toBottomOf="@id/not_at_pickup_warning"
        app:layout_constraintEnd_toEndOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@android:color/white"
        android:backgroundTint="@android:color/holo_red_dark"
        />

    <Button
        android:id="@+id/button_ok"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:textColor="@android:color/white"
        android:backgroundTint="@color/green"
        app:layout_constraintTop_toBottomOf="@+id/not_at_pickup_warning"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>